36-attach/01 AttachListener+Socket IPC(36 域 1/2): attach-on-demand 懒启动(vm_start 清残留,StartAttachListener/ReduceSignalUsage 例外);触发=attach_pid 文件+SIGQUIT 双条件(Signal 线程 SIGBREAK 二义: 无文件=线程转储,有文件=is_init_trigger uid 校验后 init,已初始化短路);Attach Listener JavaThread dequeue→分派→complete(10 操作,jcmd=DCmd::parse_and_execute arg(0)——34-nmt/02 AttachAPI 通道衔接);Linux socket .tmp bind+rename 原子出现,0600+SO_PEERCRED 双保险,NUL 分隔协议 v1/101 BADVERSION;大纲回填 ⚠️ 10 组(启动建 socket 错/SIGQUIT 机制错/协议格式错/400 权限错);实证: touch+kill -3 触发链验证+环境事实(JMC/VisualVM 自动 attach,jcmd 超时=/proc 路径问题修正旧结论)